Add support for skipping date extraction when a quote service does not provide a valid date

The state of date parsing is also reflected into the associated ui.

BUG:428679
FIXED-IN:8.0.5